--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "lint": "eslint --fix --config ./.eslintrc.js --ext .ts,.tsx,.js ./",
     "serve": "gatsby serve",
     "start": "npm run develop",
