--- a/package.json
+++ b/package.json
@@ -29,48 +29,54 @@
     ">0.2%",
     "not dead",
     "not op_mini all",
-    "not ie <= 11"
+    "not ie <= 11",
+    "last 1 Chrome version",
+    "last 1 Firefox version",
+    "last 2 Edge major versions",
+    "last 2 Safari major versions",
+    "last 2 iOS major versions",
+    "Firefox ESR"
   ],
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "gatsby": "^2.20.6",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-catch-links": "^2.2.1",
-    "gatsby-plugin-manifest": "^2.3.2",
-    "gatsby-plugin-offline": "^3.1.1",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sass": "^2.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-plugin-typescript": "^2.3.1",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-sharp": "^2.4.2",
-    "node-sass": "^4.13.1",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "gatsby": "^2.23.17",
+    "gatsby-image": "^2.4.12",
+    "gatsby-plugin-catch-links": "^2.3.10",
+    "gatsby-plugin-manifest": "^2.4.17",
+    "gatsby-plugin-offline": "^3.2.16",
+    "gatsby-plugin-react-helmet": "^3.3.9",
+    "gatsby-plugin-sass": "^2.3.10",
+    "gatsby-plugin-sharp": "^2.6.17",
+    "gatsby-plugin-typescript": "^2.4.12",
+    "gatsby-source-filesystem": "^2.3.17",
+    "gatsby-transformer-sharp": "^2.5.10",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "typescript": "^3.8.3"
+    "react-helmet": "^6.1.0",
+    "typescript": "^3.9.6"
   },
   "devDependencies": {
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.31",
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-helmet": "^5.0.15",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^12.12.47",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-json-format": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "prettier": "^2.0.2",
-    "ts-jest": "^24.3.0"
+    "jest": "^26.1.0",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.1.1"
   }
 }
